--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,8 @@
 
+@import url("https://fonts.googleapis.com/css?family=Dancing+Script");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css');
+
 *{margin:0px;
  padding:0px;
  box-sizing:border-box;
@@ -36,11 +40,9 @@ ul{
 }
 header li{
   display:inline-block;
-  padding:20px 15px;
-  border-right:1px hsl(0, 100%, 15%) solid;
+  padding:10px 25px;
 font-family: 'Open Sans Condensed', sans-serif;
-  font-size:20px;
-  font-weight:bold;
+  font-size:15px;
 }
 header li:hover{
   background-color:hsla(225, 100%, 80%,0.4);
@@ -55,6 +57,7 @@ header li:hover{
 } 
 .nav-link{
 text-decoration:none;
+color:white;
 }
 #title{
   position:relative;
