--- a/src/template/template.html
+++ b/src/template/template.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" rel="stylesheet">
     <title>Product Landing Page</title>
 </head> 
   <body>
@@ -16,9 +12,10 @@
       <nav id="nav-bar">
         <ul>
           <li><a class="nav-link" href="#subscribe">Subscribe</a></li>
-          <li><a class="nav-link" href="#products">PRODUCTS</a></li>
-          <li><a class="nav-link" href="#process">PROCESS</a></li>
-          <li><a class="nav-link" href="#features">FEATURES</a></li>
+          <li><a class="nav-link" href="#products">Products</a></li>
+          <li><a class="nav-link" href="#process">Process</a></li>
+          <li><a class="nav-link" href="#features">Features</a></li>
+          <li><a class="nav-link" href="/p&g/about.html">About Us</a></li>
         </ul>
       </nav>  
     </header>
@@ -32,9 +29,9 @@
       </section>
       <section id="products">
         <div id="container">
-          <div id="item"><img class="purse-image" src="./assets/purse1.jpg" alt="purse1"></div>
-          <div id="item"><img class="purse-image" src="./assets/purse2.jpg" alt="purse2"></div>
-          <div id="item"><img class="purse-image" src="./assets/purse3.jpg" alt="purse3"> </div>
+          <div id="item"><img class="purse-image" src="../assets/purse1.jpg" alt="purse1"></div>
+          <div id="item"><img class="purse-image" src="../assets/purse2.jpg" alt="purse2"></div>
+          <div id="item"><img class="purse-image" src="../assets/purse3.jpg" alt="purse3"> </div>
            <button id="price-tag">$100.00</button>
             <button id="price-tag">$199.00</button>
             <button id="price-tag">$150.00</button>
@@ -63,7 +60,7 @@
   <div id="form-image"></div>
   <div class="contact-title" ><i class="zmdi zmdi-tap-and-play"></i>
     subscribe
-    <form id="form" action="https://www.freecodecamp.com/email-submit">
+    <form id="form" action="">
      <label for="email">Please enter your email address here and <br>subscribe for our most updated product information every week.</label><br> 
      <input type="email" id="email" name="email" placeholder="Enter your email address" title="Please enter valid email address only" required />
       <input id="submit" type="submit"  value="submit" style="background:brown"></input>
@@ -80,6 +77,5 @@
         <li>Photo by  Unsplash</li>
         </ul>
       </footer>
-      <script  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </body>
   </html>
